--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 2.0.0
 description = A shim for the typeshed changes in mypy
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/Morry98/types-all
+url = https://github.com/Morry98/types-all-v2
 author = Matteo Morando
 author_email = matteomorando98@gmail.com
 license = MIT
@@ -24,8 +24,8 @@ install_requires =
     types-Flask-Migrate
     types-Flask-SocketIO
     types-JACK-Client
+    types-Jetson.GPIO
     types-Markdown
-    types-Pillow
     types-PyAutoGUI
     types-PyMySQL
     types-PyScreeze
@@ -39,11 +39,11 @@ install_requires =
     types-aiofiles
     types-antlr4-python3-runtime
     types-assertpy
+    types-atheris
     types-aws-xray-sdk
     types-beautifulsoup4
     types-bleach
     types-boltons
-    types-boto
     types-braintree
     types-cachetools
     types-caldav
@@ -55,20 +55,19 @@ install_requires =
     types-colorama
     types-commonmark
     types-console-menu
+    types-corus
     types-croniter
     types-dateparser
     types-decorator
     types-defusedxml
     types-docker
     types-dockerfile-parse
-    types-docopt
     types-docutils
     types-editdistance
     types-entrypoints
     types-fanstatic
     types-first
     types-flake8
-    types-flake8-2020
     types-flake8-bugbear
     types-flake8-builtins
     types-flake8-docstrings
@@ -91,21 +90,25 @@ install_requires =
     types-inifile
     types-jmespath
     types-jsonschema
+    types-jwcrypto
     types-keyboard
     types-ldap3
     types-libsass
+    types-lupa
     types-lzstring
+    types-m3u8
     types-mock
     types-mypy-extensions
     types-mysqlclient
     types-nanoid
     types-netaddr
+    types-netifaces
     types-networkx
     types-oauthlib
+    types-objgraph
     types-olefile
     types-openpyxl
     types-opentracing
-    types-paho-mqtt
     types-paramiko
     types-parsimonious
     types-passlib
@@ -114,7 +117,6 @@ install_requires =
     types-pep8-naming
     types-pexpect
     types-pika
-    types-playsound
     types-polib
     types-portpicker
     types-protobuf
@@ -138,17 +140,16 @@ install_requires =
     types-python-crontab
     types-python-datemath
     types-python-dateutil
-    types-python-gflags
+    types-python-http-client
+    types-python-jenkins
     types-python-jose
     types-python-nmap
-    types-python-slugify
     types-python-xlib
     types-pytz
     types-pywin32
     types-pyxdg
     types-qrbill
     types-qrcode
-    types-redis
     types-regex
     types-reportlab
     types-requests
@@ -181,6 +182,7 @@ install_requires =
     types-whatthepatch
     types-workalendar
     types-wurlitzer
+    types-xdgenvpy
     types-xmltodict
     types-zstd
     types-zxcvbn
