--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = types_all_v2
-version = 2.0.1
+version = 2.0.2
 description = A shim for the typeshed changes in mypy
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -18,6 +18,9 @@ classifiers =
 
 [options]
 install_requires =
+    pandas-stubs
+    pydantic
+    sqlalchemy[mypy]
     types-Deprecated
     types-ExifRead
     types-Flask-Cors
@@ -156,7 +159,6 @@ install_requires =
     types-requests-oauthlib
     types-retry
     types-s2clientprotocol
-    types-seaborn
     types-setuptools
     types-shapely
     types-simplejson
