--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = types_all_v2
-version = 2.0.2
+version = 2.0.3
 description = A shim for the typeshed changes in mypy
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -159,6 +159,7 @@ install_requires =
     types-requests-oauthlib
     types-retry
     types-s2clientprotocol
+    types-seaborn
     types-setuptools
     types-shapely
     types-simplejson
