--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = types_all_v2
-version = 2.0.3
+version = 2.0.4
 description = A shim for the typeshed changes in mypy
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -153,6 +153,7 @@ install_requires =
     types-pyxdg
     types-qrbill
     types-qrcode
+    types-redis
     types-regex
     types-reportlab
     types-requests
